Update JavaCalculator02.java
Removed reference to source-code and preview from the command line